test/libyul/yulSyntaxTests/invalid/swap_disallowed.yul
{
    swap0()
    swap1()
    swap2()
    swap3()
    swap4()
    swap5()
    swap6()
    swap7()
    swap8()
    swap9()
    swap10()
    swap11()
    swap12()
    swap13()
    swap14()
    swap15()
    swap16()
    swap32()
}
// ----
// DeclarationError 4619: (6-11='swap0'): Function "swap0" not found.
// DeclarationError 4619: (18-23='swap1'): Function "swap1" not found.
// DeclarationError 4619: (30-35='swap2'): Function "swap2" not found.
// DeclarationError 4619: (42-47='swap3'): Function "swap3" not found.
// DeclarationError 4619: (54-59='swap4'): Function "swap4" not found.
// DeclarationError 4619: (66-71='swap5'): Function "swap5" not found.
// DeclarationError 4619: (78-83='swap6'): Function "swap6" not found.
// DeclarationError 4619: (90-95='swap7'): Function "swap7" not found.
// DeclarationError 4619: (102-107='swap8'): Function "swap8" not found.
// DeclarationError 4619: (114-119='swap9'): Function "swap9" not found.
// DeclarationError 4619: (126-132='swap10'): Function "swap10" not found.
// DeclarationError 4619: (139-145='swap11'): Function "swap11" not found.
// DeclarationError 4619: (152-158='swap12'): Function "swap12" not found.
// DeclarationError 4619: (165-171='swap13'): Function "swap13" not found.
// DeclarationError 4619: (178-184='swap14'): Function "swap14" not found.
// DeclarationError 4619: (191-197='swap15'): Function "swap15" not found.
// DeclarationError 4619: (204-210='swap16'): Function "swap16" not found.
// DeclarationError 4619: (217-223='swap32'): Function "swap32" not found.
